pkg/interface/lib/opt/lex_n_yacc/vlog_file.output
Terminals which are not used

   NUMBER


Grammar

    0 $accept: start $end

    1 start: initialize modules

    2 initialize: /* empty */

    3 modules: modules module
    4        | module

    5 module: MODULE add_module ports body ENDMODULE
    6       | PRIMITIVE add_module ports body ENDPRIMITIVE

    7 add_module: NAME

    8 ports: '(' list ')' ';'
    9      | ';'

   10 body: body net
   11     | body assign
   12     | body cell
   13     | /* empty */

   14 net: net_type list ';'

   15 net_type: INPUT
   16         | OUTPUT
   17         | INOUT
   18         | WIRE
   19         | REG
   20         | SUPPLY_L
   21         | SUPPLY_H

   22 assign: ASSIGN NAME '=' NAME ';'

   23 cell: NAME NAME '(' list ')' ';'
   24     | NAME '(' list ')' ';'
   25     | NAME NAME '(' mapping_list ')' ';'
   26     | NAME '(' strength_list ')' NAME '(' list ')' ';'

   27 list: list ',' NAME
   28     | list ','
   29     | NAME
   30     | /* empty */

   31 strength_list: strength_list ',' STRENGTH
   32              | STRENGTH

   33 mapping_list: mapping_list ',' '.' NAME '(' NAME ')'
   34             | '.' NAME '(' NAME ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 23 24 25 26 33 34
')' (41) 8 23 24 25 26 33 34
',' (44) 27 28 31 33
'.' (46) 33 34
';' (59) 8 9 14 22 23 24 25 26
'=' (61) 22
error (256)
MODULE (258) 5
ENDMODULE (259) 5
PRIMITIVE (260) 6
ENDPRIMITIVE (261) 6
ASSIGN (262) 22
INPUT (263) 15
OUTPUT (264) 16
INOUT (265) 17
WIRE (266) 18
REG (267) 19
SUPPLY_L (268) 20
SUPPLY_H (269) 21
NAME (270) 7 22 23 24 25 26 27 29 33 34
NUMBER (271)
STRENGTH (272) 31 32


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
start (25)
    on left: 1, on right: 0
initialize (26)
    on left: 2, on right: 1
modules (27)
    on left: 3 4, on right: 1 3
module (28)
    on left: 5 6, on right: 3 4
add_module (29)
    on left: 7, on right: 5 6
ports (30)
    on left: 8 9, on right: 5 6
body (31)
    on left: 10 11 12 13, on right: 5 6 10 11 12
net (32)
    on left: 14, on right: 10
net_type (33)
    on left: 15 16 17 18 19 20 21, on right: 14
assign (34)
    on left: 22, on right: 11
cell (35)
    on left: 23 24 25 26, on right: 12
list (36)
    on left: 27 28 29 30, on right: 8 14 23 24 26 27 28
strength_list (37)
    on left: 31 32, on right: 26 31
mapping_list (38)
    on left: 33 34, on right: 25 33


state 0

    0 $accept: . start $end

    $default  reduce using rule 2 (initialize)

    start       go to state 1
    initialize  go to state 2


state 1

    0 $accept: start . $end

    $end  shift, and go to state 3


state 2

    1 start: initialize . modules

    MODULE     shift, and go to state 4
    PRIMITIVE  shift, and go to state 5

    modules  go to state 6
    module   go to state 7


state 3

    0 $accept: start $end .

    $default  accept


state 4

    5 module: MODULE . add_module ports body ENDMODULE

    NAME  shift, and go to state 8

    add_module  go to state 9


state 5

    6 module: PRIMITIVE . add_module ports body ENDPRIMITIVE

    NAME  shift, and go to state 8

    add_module  go to state 10


state 6

    1 start: initialize modules .
    3 modules: modules . module

    MODULE     shift, and go to state 4
    PRIMITIVE  shift, and go to state 5

    $default  reduce using rule 1 (start)

    module  go to state 11


state 7

    4 modules: module .

    $default  reduce using rule 4 (modules)


state 8

    7 add_module: NAME .

    $default  reduce using rule 7 (add_module)


state 9

    5 module: MODULE add_module . ports body ENDMODULE

    '('  shift, and go to state 12
    ';'  shift, and go to state 13

    ports  go to state 14


state 10

    6 module: PRIMITIVE add_module . ports body ENDPRIMITIVE

    '('  shift, and go to state 12
    ';'  shift, and go to state 13

    ports  go to state 15


state 11

    3 modules: modules module .

    $default  reduce using rule 3 (modules)


state 12

    8 ports: '(' . list ')' ';'

    NAME  shift, and go to state 16

    $default  reduce using rule 30 (list)

    list  go to state 17


state 13

    9 ports: ';' .

    $default  reduce using rule 9 (ports)


state 14

    5 module: MODULE add_module ports . body ENDMODULE

    $default  reduce using rule 13 (body)

    body  go to state 18


state 15

    6 module: PRIMITIVE add_module ports . body ENDPRIMITIVE

    $default  reduce using rule 13 (body)

    body  go to state 19


state 16

   29 list: NAME .

    $default  reduce using rule 29 (list)


state 17

    8 ports: '(' list . ')' ';'
   27 list: list . ',' NAME
   28     | list . ','

    ')'  shift, and go to state 20
    ','  shift, and go to state 21


state 18

    5 module: MODULE add_module ports body . ENDMODULE
   10 body: body . net
   11     | body . assign
   12     | body . cell

    ENDMODULE  shift, and go to state 22
    ASSIGN     shift, and go to state 23
    INPUT      shift, and go to state 24
    OUTPUT     shift, and go to state 25
    INOUT      shift, and go to state 26
    WIRE       shift, and go to state 27
    REG        shift, and go to state 28
    SUPPLY_L   shift, and go to state 29
    SUPPLY_H   shift, and go to state 30
    NAME       shift, and go to state 31

    net       go to state 32
    net_type  go to state 33
    assign    go to state 34
    cell      go to state 35


state 19

    6 module: PRIMITIVE add_module ports body . ENDPRIMITIVE
   10 body: body . net
   11     | body . assign
   12     | body . cell

    ENDPRIMITIVE  shift, and go to state 36
    ASSIGN        shift, and go to state 23
    INPUT         shift, and go to state 24
    OUTPUT        shift, and go to state 25
    INOUT         shift, and go to state 26
    WIRE          shift, and go to state 27
    REG           shift, and go to state 28
    SUPPLY_L      shift, and go to state 29
    SUPPLY_H      shift, and go to state 30
    NAME          shift, and go to state 31

    net       go to state 32
    net_type  go to state 33
    assign    go to state 34
    cell      go to state 35


state 20

    8 ports: '(' list ')' . ';'

    ';'  shift, and go to state 37


state 21

   27 list: list ',' . NAME
   28     | list ',' .

    NAME  shift, and go to state 38

    $default  reduce using rule 28 (list)


state 22

    5 module: MODULE add_module ports body ENDMODULE .

    $default  reduce using rule 5 (module)


state 23

   22 assign: ASSIGN . NAME '=' NAME ';'

    NAME  shift, and go to state 39


state 24

   15 net_type: INPUT .

    $default  reduce using rule 15 (net_type)


state 25

   16 net_type: OUTPUT .

    $default  reduce using rule 16 (net_type)


state 26

   17 net_type: INOUT .

    $default  reduce using rule 17 (net_type)


state 27

   18 net_type: WIRE .

    $default  reduce using rule 18 (net_type)


state 28

   19 net_type: REG .

    $default  reduce using rule 19 (net_type)


state 29

   20 net_type: SUPPLY_L .

    $default  reduce using rule 20 (net_type)


state 30

   21 net_type: SUPPLY_H .

    $default  reduce using rule 21 (net_type)


state 31

   23 cell: NAME . NAME '(' list ')' ';'
   24     | NAME . '(' list ')' ';'
   25     | NAME . NAME '(' mapping_list ')' ';'
   26     | NAME . '(' strength_list ')' NAME '(' list ')' ';'

    NAME  shift, and go to state 40
    '('   shift, and go to state 41


state 32

   10 body: body net .

    $default  reduce using rule 10 (body)


state 33

   14 net: net_type . list ';'

    NAME  shift, and go to state 16

    $default  reduce using rule 30 (list)

    list  go to state 42


state 34

   11 body: body assign .

    $default  reduce using rule 11 (body)


state 35

   12 body: body cell .

    $default  reduce using rule 12 (body)


state 36

    6 module: PRIMITIVE add_module ports body ENDPRIMITIVE .

    $default  reduce using rule 6 (module)


state 37

    8 ports: '(' list ')' ';' .

    $default  reduce using rule 8 (ports)


state 38

   27 list: list ',' NAME .

    $default  reduce using rule 27 (list)


state 39

   22 assign: ASSIGN NAME . '=' NAME ';'

    '='  shift, and go to state 43


state 40

   23 cell: NAME NAME . '(' list ')' ';'
   25     | NAME NAME . '(' mapping_list ')' ';'

    '('  shift, and go to state 44


state 41

   24 cell: NAME '(' . list ')' ';'
   26     | NAME '(' . strength_list ')' NAME '(' list ')' ';'

    NAME      shift, and go to state 16
    STRENGTH  shift, and go to state 45

    $default  reduce using rule 30 (list)

    list           go to state 46
    strength_list  go to state 47


state 42

   14 net: net_type list . ';'
   27 list: list . ',' NAME
   28     | list . ','

    ';'  shift, and go to state 48
    ','  shift, and go to state 21


state 43

   22 assign: ASSIGN NAME '=' . NAME ';'

    NAME  shift, and go to state 49


state 44

   23 cell: NAME NAME '(' . list ')' ';'
   25     | NAME NAME '(' . mapping_list ')' ';'

    NAME  shift, and go to state 16
    '.'   shift, and go to state 50

    $default  reduce using rule 30 (list)

    list          go to state 51
    mapping_list  go to state 52


state 45

   32 strength_list: STRENGTH .

    $default  reduce using rule 32 (strength_list)


state 46

   24 cell: NAME '(' list . ')' ';'
   27 list: list . ',' NAME
   28     | list . ','

    ')'  shift, and go to state 53
    ','  shift, and go to state 21


state 47

   26 cell: NAME '(' strength_list . ')' NAME '(' list ')' ';'
   31 strength_list: strength_list . ',' STRENGTH

    ')'  shift, and go to state 54
    ','  shift, and go to state 55


state 48

   14 net: net_type list ';' .

    $default  reduce using rule 14 (net)


state 49

   22 assign: ASSIGN NAME '=' NAME . ';'

    ';'  shift, and go to state 56


state 50

   34 mapping_list: '.' . NAME '(' NAME ')'

    NAME  shift, and go to state 57


state 51

   23 cell: NAME NAME '(' list . ')' ';'
   27 list: list . ',' NAME
   28     | list . ','

    ')'  shift, and go to state 58
    ','  shift, and go to state 21


state 52

   25 cell: NAME NAME '(' mapping_list . ')' ';'
   33 mapping_list: mapping_list . ',' '.' NAME '(' NAME ')'

    ')'  shift, and go to state 59
    ','  shift, and go to state 60


state 53

   24 cell: NAME '(' list ')' . ';'

    ';'  shift, and go to state 61


state 54

   26 cell: NAME '(' strength_list ')' . NAME '(' list ')' ';'

    NAME  shift, and go to state 62


state 55

   31 strength_list: strength_list ',' . STRENGTH

    STRENGTH  shift, and go to state 63


state 56

   22 assign: ASSIGN NAME '=' NAME ';' .

    $default  reduce using rule 22 (assign)


state 57

   34 mapping_list: '.' NAME . '(' NAME ')'

    '('  shift, and go to state 64


state 58

   23 cell: NAME NAME '(' list ')' . ';'

    ';'  shift, and go to state 65


state 59

   25 cell: NAME NAME '(' mapping_list ')' . ';'

    ';'  shift, and go to state 66


state 60

   33 mapping_list: mapping_list ',' . '.' NAME '(' NAME ')'

    '.'  shift, and go to state 67


state 61

   24 cell: NAME '(' list ')' ';' .

    $default  reduce using rule 24 (cell)


state 62

   26 cell: NAME '(' strength_list ')' NAME . '(' list ')' ';'

    '('  shift, and go to state 68


state 63

   31 strength_list: strength_list ',' STRENGTH .

    $default  reduce using rule 31 (strength_list)


state 64

   34 mapping_list: '.' NAME '(' . NAME ')'

    NAME  shift, and go to state 69


state 65

   23 cell: NAME NAME '(' list ')' ';' .

    $default  reduce using rule 23 (cell)


state 66

   25 cell: NAME NAME '(' mapping_list ')' ';' .

    $default  reduce using rule 25 (cell)


state 67

   33 mapping_list: mapping_list ',' '.' . NAME '(' NAME ')'

    NAME  shift, and go to state 70


state 68

   26 cell: NAME '(' strength_list ')' NAME '(' . list ')' ';'

    NAME  shift, and go to state 16

    $default  reduce using rule 30 (list)

    list  go to state 71


state 69

   34 mapping_list: '.' NAME '(' NAME . ')'

    ')'  shift, and go to state 72


state 70

   33 mapping_list: mapping_list ',' '.' NAME . '(' NAME ')'

    '('  shift, and go to state 73


state 71

   26 cell: NAME '(' strength_list ')' NAME '(' list . ')' ';'
   27 list: list . ',' NAME
   28     | list . ','

    ')'  shift, and go to state 74
    ','  shift, and go to state 21


state 72

   34 mapping_list: '.' NAME '(' NAME ')' .

    $default  reduce using rule 34 (mapping_list)


state 73

   33 mapping_list: mapping_list ',' '.' NAME '(' . NAME ')'

    NAME  shift, and go to state 75


state 74

   26 cell: NAME '(' strength_list ')' NAME '(' list ')' . ';'

    ';'  shift, and go to state 76


state 75

   33 mapping_list: mapping_list ',' '.' NAME '(' NAME . ')'

    ')'  shift, and go to state 77


state 76

   26 cell: NAME '(' strength_list ')' NAME '(' list ')' ';' .

    $default  reduce using rule 26 (cell)


state 77

   33 mapping_list: mapping_list ',' '.' NAME '(' NAME ')' .

    $default  reduce using rule 33 (mapping_list)
